# quick-system-info-gui

./: .gitignore  CMakeLists.txt  Quick_System_Info.desktop  README.md  about.cpp  build.cmake  build.sh  flatbutton.cpp  flatbutton.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quick-system-info-gui.pro  release.sh  version.h
.obs/: workflows.yml
actions/: org.mxlinux.quick-system-info-gui.policy
debian/: README.md  changelog  control  copyright  install  rules
debs/: quick-system-info-gui_22.10.07mx21.dsc  quick-system-info-gui_22.10.07mx21.tar.xz  quick-system-info-gui_22.10.07mx21_amd64.build  quick-system-info-gui_22.10.07mx21_amd64.buildinfo  quick-system-info-gui_22.10.07mx21_amd64.changes  quick-system-info-gui_22.10.07mx21_amd64.deb  quick-system-info-gui_24.04.01.dsc  quick-system-info-gui_24.04.01.tar.xz  quick-system-info-gui_24.12.05.dsc  quick-system-info-gui_24.12.05.tar.xz  quick-system-info-gui_24.12.05_source.changes  quick-system-info-gui_24.12.06.dsc  quick-system-info-gui_24.12.06.tar.xz  quick-system-info-gui_24.12.06_source.changes  quick-system-info-gui_24.12.08.dsc  quick-system-info-gui_24.12.08.tar.xz  quick-system-info-gui_24.12.08_source.build  quick-system-info-gui_24.12.08_source.buildinfo  quick-system-info-gui_24.12.08_source.changes  quick-system-info-gui_24.12.09.dsc  quick-system-info-gui_24.12.09.tar.xz  quick-system-info-gui_24.12.09_source.changes  quick-system-info-gui_25.04.01mx25.dsc  quick-system-info-gui_25.04.01mx25.tar.xz  quick-system-info-gui_25.04.01mx25_source.changes  quick-system-info-gui_25.08.01.dsc  (+20 more)
(+433 files in other folders)
